www/css/style.css
/* Empty. Add your own CSS if you like */

/*
Dark-blue: #243B53
Button-blue: #005DA0
*/

.background-dark-blue {
  background-color: #243B53;
  color: white;
}

.tl-btn {
  border-radius: 10px;
  font-size: 22px;
  padding: 10px;
}

.button.button-positive.tl-btn {
  width: 80%;
  margin: auto;
  margin-left: 10%;
  background-color: #005DA0;
  margin-bottom: 20px;
}

.slider-pager .slider-pager-page {
  color: white;
}

#in-flight-state {
  width: 100%;
  height: 100%;
}

.notify-title {
  color: white;
}

.list .item i.notify-checkmark {
  font-size: 38px;
  color: #76EE00;
}

.notify-row-container {
  line-height: 1.2;
  display: inline-block;
  margin-top: 20px;
  margin-bottom: 20px;
  margin-left: 15px;
}

.notify-row-container .notify-row-header {
  margin-bottom: 0;
  font-weight: bold;
}

.wrap {
  word-break: break-all;
}

.color-white{
  color: #fff;
}

.color-white i {
  color: #fff;
}

.bar-header {
  background: #243B53;
  color: white;
}

.text-right {
  text-align: right;
}

.gray {
  color: #BBB;
}

.button-clear.button-clear.points {
  color: white;
}

@-webkit-keyframes pulse {
  0% {
    -webkit-transform: scale(1, 1);
  }
  50% {
    -webkit-transform: scale(1.3, 1.3);
  }
  100% {
    -webkit-transform: scale(1, 1);
  }
}
.pulse {
  -webkit-animation-name: pulse;
  -webkit-animation-duration: 0.3s;
  -webkit-transform-origin: 50% 50%;
  -webkit-animation-iteration-count: 1;
  -webkit-animation-timing-function: ease-in-out;
  animation-duration: 0.6;
}

/* fullscreen images */
img.fullscreen  {
  width: 100%;
}

.rotate90:before {
  -ms-transform: rotate(90deg);
  -webkit-transform: rotate(90deg);
  transform: rotate(90deg);
}

.starbucks {
  color: white;
}

.purchase-notification {
  width: 300px;
  left: 50%;
  margin-left: -150px;
  position: absolute;
  top: -25px;
  z-index: 5;
}

@-webkit-keyframes purchase-notification {
  0% {
    top: -25px;
  }
  20% {
    top: 55px;
  }
  80% {
    top: 55px;
  }
  100% {
    top: -25px;
  }
}
.show-notification {
  -webkit-animation-name: purchase-notification;
  -webkit-animation-duration: 3s;
  -webkit-transform-origin: 50% 50%;
  -webkit-animation-iteration-count: 1;
  -webkit-animation-timing-function: ease-in-out;
  animation-duration: 0.6;
}

.right-navigation {
  position: absolute;
  right: 8px;
}

.left.payment {
  float: left;
  width: 60px;
  padding-top: 20px;
  padding-left: 12px;
}

.notify-row-container {
    max-width: 300px;
}

.left.payment.paypal {
    padding-top: 17px;
}

.aero-points.item.item-text-wrap.item.item-icon-left {
    padding-left: 76px;
}

.aero-points.item.item-text-wrap.item.item-icon-left i {
    padding-left: 32px;
}

